[gd_scene load_steps=6 format=3 uid="uid://bsce8notrfxto"]

[ext_resource type="Script" path="res://drone_mods/augment_display.gd" id="1_8rrx0"]
[ext_resource type="FontFile" uid="uid://dcmpwu0s0vvy6" path="res://assets/font/ChakraPetch/ChakraPetch-Regular.ttf" id="2_w8aks"]
[ext_resource type="Texture2D" uid="uid://dj5gfcti0i2wu" path="res://assets/visual/augment.png" id="3_exujj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uq23t"]
bg_color = Color(0.392157, 0.392157, 0.392157, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_svn3l"]
default_font = ExtResource("2_w8aks")
default_font_size = 12
PanelContainer/styles/panel = SubResource("StyleBoxFlat_uq23t")

[node name="AugmentDisplay" type="Control"]
custom_minimum_size = Vector2(140, 100)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -50.0
offset_right = 70.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_8rrx0")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(0, 1, 1, 1)
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = SubResource("Theme_svn3l")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="AugmentIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_exujj")
expand_mode = 1
stretch_mode = 5

[node name="BatteryDrainLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 1
text = "ðŸ”‹ 12 p/s"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_constants/separation = 5

[node name="StatLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true
text = "Line1: 999
Line2: 999
Line3: 999
Line4: 999
Line5: 999"
fit_content = true
threaded = true

[node name="StatLabel3" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true
text = "[b]acceleration: 999[/b]
[img=16]res://assets/visual/drone_x128.png[/img]: 999
damage: 999
mass: 999
max_battery: 999
max_speed: 999
critical_chance: 999
critical_damage: 999
recharge_speed: 999
storage_capacity: 999
vacuum_radius: 999"
fit_content = true
threaded = true

[node name="StatLabel2" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
text = "âš¡: 120
âš”: 3
ðŸ”˜: 201
ðŸŽ¯: 39%
ðŸ’¥: 999%"
threaded = true

[node name="ClickArea" type="Button" parent="PanelContainer"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
flat = true

[connection signal="pressed" from="PanelContainer/ClickArea" to="." method="_on_click_area_pressed"]
